# kb-drums

./: .gitignore  Cargo.toml  readme.md
.github/chglog/: release.yml
.github/workflows/: main.yml
src/: app.rs  config.rs  keys.rs  lib.rs  main.rs
src/app/: cmd_default_config.rs  cmd_devices.rs  cmd_drums.rs  cmd_keys.rs
src/config/: de.rs
