[package]
name = "kb-drums"
version = "0.5.0"
authors = ["insomnimus <insomnimus19@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.4"
crossterm = { version = "0.21.0", features = ["serde"] }
indexmap = { version = "1.7.0", features = [ "serde" ] }
midir = "0.7.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
