[package]
name = "kb-drums"
version = "0.6.2"
authors = ["insomnimus <insomnimus19@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help", "unicode"] }
crossterm = { version = "0.21.0", features = ["serde"] }
indexmap = { version = "1.7.0", features = [ "serde" ] }
midir = "0.7.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
